force-app/main/default/objects/ChangeDataCapture__mdt/ChangeDataCapture__mdt.object-meta.xml
<CustomObject>
    <label>Change Data Capture</label>
    <pluralLabel>ChangeDataCapture</pluralLabel>
</CustomObject>