force-app/main/default/objects/ChangeDataCapture__mdt/fields/EventName__c.field-meta.xml
<CustomField>
    <fullName>EventName__c</fullName>
    <label>EventName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>