force-app/main/default/objects/ChangeDataCapture__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Change Data Capturo está ativo?</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>