force-app/main/default/objects/ChangeDataCapture__mdt/fields/IsMonitoring__c.field-meta.xml
<CustomField>
    <fullName>IsMonitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activate Monitor status on integration job</description>
    <label>IsMonitoring</label>
    <type>Checkbox</type>
</CustomField>