force-app/main/default/objects/ChangeDataCapture__mdt/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adicionar o Header de metadados à requisição</description>
    <label>Metadata</label>
    <type>Checkbox</type>
</CustomField>