force-app/main/default/objects/ChangeDataCapture__mdt/fields/PayloadFields__c.field-meta.xml
<CustomField>
    <fullName>PayloadFields__c</fullName>
    <description>Campos utilizados para geração do Payload do evento Change Data Capture</description>
    <label>PayloadFields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>