force-app/main/default/objects/ChangeDataCapture__mdt/fields/SObjectRecordType__c.field-meta.xml
<CustomField>
    <fullName>SObjectRecordType__c</fullName>
    <label>SObjectRecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>