force-app/main/default/objects/ChangeDataCapture__mdt/fields/TrackFields__c.field-meta.xml
<CustomField>
    <fullName>TrackFields__c</fullName>
    <description>Campos observados na Trigger para ativação do evento de Change Data Capture (integração da modificação)</description>
    <label>TrackFields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>