force-app/main/default/objects/ChangeDataCapture__mdt/fields/Transformer__c.field-meta.xml
<CustomField>
    <fullName>Transformer__c</fullName>
    <label>Transformer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>